--- a/src/Style/home.css
+++ b/src/Style/home.css
@@ -1,37 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@500;700&family=Roboto+Slab:wght@300&display=swap');
+
 * {
   margin: 0;
   box-sizing: border-box;
 }
 
 body {
-  /* margin: 0 auto; */
   min-height: 100vh;
   min-width: 1200px;
   font-family: 'Montserrat', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Roboto Slab', serif;
-  
+  font-family: 'Poppins', sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
-
-
-.wrapper{
+.wrapper {
   border: 4px solid #000;
-  border-radius:4%;
-  width: 375px;
+  border-radius: 4%;
+  /* width: 375px; */
   margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 8px 6px;
-background-color: #a399b2;
-background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
-
-
+  background-color: #a399b2;
+  background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
 }
-.title{
+
+.title {
   font-size: 25px;
   font-weight: 900;
   color: #000;
@@ -41,39 +37,31 @@ background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
   height: 80vh;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  overflow-x:hidden ;
+  overflow-x: hidden;
   overflow-y: scroll;
-  
 }
 
-
-.text-decoration{
+.text-decoration {
   text-decoration: none;
   color: #fff;
   font-weight: 400;
- 
 }
 
-.card-item{
+.card-item {
   width: 11rem;
-  height:11rem;
-  padding:0.5rem;
-  /* border: 0.5px solid #b9b6bc;; */
-  box-shadow:-5px 14px 12px -3px rgba(0,0,0,0.4);
+  height: 11rem;
+  padding: 0.5rem;
+  box-shadow: -5px 14px 12px -3px rgba(0, 0, 0, 0.4);
   border-radius: 2px;
 }
 
-.next-page{
-  width:25px;
+.next-page {
+  width: 25px;
   height: 25px;
-  float:right;
+  float: right;
 }
 
-.card-item:hover{
+.card-item:hover {
   transition: background-color 0.3s ease;
-  background-color:#5078F2;
-}
-
-@media screen {
-  
+  background-color: #5078f2;
 }
