--- a/src/Style/home.module.css
+++ b/src/Style/home.module.css
@@ -11,40 +11,58 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Poppins', sans-serif;
   font-family: 'Roboto Slab', serif;
+  overflow: hidden;
 }
 
 .wrapper {
+  width: 375px;
   border: 4px solid #000;
   border-radius: 4%;
-  width: 375px;
-  margin: auto;
   display: flex;
+  margin: auto;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 8px 6px;
+  margin-top: 2rem;
   background-color: #a399b2;
   background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
 }
 
-.back-page {
-  width: 25px;
-  height: 25px;
-  float: left;
-}
-
-.detail-container {
-  height: 95vh;
-}
-
-.span-text {
-  font-size: 18px;
-  font-weight: 800;
+.title {
+  font-size: 25px;
+  font-weight: 900;
   color: #000;
 }
 
-.detail {
+.grid-container {
+  height: 83vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  overflow-y: scroll;
+}
+
+.text-decoration {
+  text-decoration: none;
   color: #fff;
-  font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
+}
+
+.card-item {
+  width: 11rem;
+  height: 11rem;
+  padding: 0.5rem;
+  box-shadow: -5px 14px 12px -3px rgba(0, 0, 0, 0.4);
+  border-radius: 2px;
+}
+
+.next-page {
+  width: 25px;
+  height: 25px;
+  float: right;
+}
+
+.card-item:hover {
+  transition: background-color 0.3s ease;
+  background-color: #5078f2;
 }
